[gd_scene load_steps=3 format=2]

[ext_resource path="res://maps/HighlightArea.gd" type="Script" id=1]
[ext_resource path="res://assets/world/character.svg" type="Texture" id=2]

[node name="HighlightArea" type="Area2D"]
script = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 125.046, 184.117 )
texture = ExtResource( 2 )
energy = 1.15
mode = 2
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0.780392 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
